--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@ html, body,
 ul, ol, li,
 h1, h2, h3, h4, h5, h6, p, div {
   margin: 0;
-  padding: 0;
+  padding: 1%;
 }
 
 html {
@@ -145,6 +145,7 @@ nav ul li a{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
     letter-spacing: 3px;
+    margin: center;
 }
 .topik a{
     display: block;
@@ -294,3 +295,24 @@ footer{
 }
 
 /* BATAS FOOTER */
+
+@media (max-width:1000px) {
+    .home {
+        font-size: 100%;
+        margin-top: 20%;
+    }
+
+    .events {
+        top: 30%;
+    }
+
+    footer {
+        padding: 2%;
+        text-align: center;
+        margin-top: 50%;
+    }
+
+    #home {
+        height: 1100px;
+    }
+}
